--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,11 +6,13 @@
   ],
   "plugins": [
     "@typescript-eslint",
-    "prettier",
-    "googleappsscript"
+    "googleappsscript",
+    "jest",
+    "prettier"
   ],
   "env": {
-    "googleappsscript/googleappsscript": true
+    "googleappsscript/googleappsscript": true,
+    "jest/globals": true
   },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
