--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^5.14.1",
     "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-googleappsscript": "^1.0.1",
+    "eslint-plugin-jest": "^22.3.0",
     "eslint-plugin-prettier": "^3.0.1",
     "gas-webpack-plugin": "^1.0.2",
     "jest": "^24.1.0",
