--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/google-apps-script": "0.0.37",
     "@types/jest": "^24.0.13",
     "@typescript-eslint/eslint-plugin": "^1.10.2",
+    "@typescript-eslint/parser": "^1.10.2",
     "clasp": "^1.0.0",
     "cpx": "^1.5.0",
     "eslint": "^5.16.0",
