--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
   "author": "proudust",
   "license": "MIT",
   "devDependencies": {
+    "@google/clasp": "^2.1.0",
     "@types/google-apps-script": "0.0.53",
     "@types/jest": "24.0.15",
     "@typescript-eslint/eslint-plugin": "1.11.0",
     "@typescript-eslint/parser": "1.11.0",
-    "clasp": "1.0.0",
     "cpx": "1.5.0",
     "eslint": "6.0.0",
     "eslint-config-prettier": "5.0.0",
