:wrench: fix eslintrc

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
-    "plugin:prettier/recommended"
+    "prettier",
+    "prettier/@typescript-eslint"
   ],
   "plugins": [
     "@typescript-eslint",
@@ -21,13 +22,34 @@
   },
   "rules": {
     "@typescript-eslint/indent": "off",
+    "@typescript-eslint/explicit-function-return-type": [
+      "warn",
+      {
+        "allowExpressions": true
+      }
+    ],
     "prettier/prettier": [
       "error",
       {
         "singleQuote": true,
         "semi": true,
-        "printWidth": 100
+        "printWidth": 100,
+        "trailingComma": "all"
       }
     ]
-  }
+  },
+  "overrides": [
+    {
+      "files": [
+        ".eslintrc.js",
+        "webpack.config.js"
+      ],
+      "env": {
+        "node": true
+      },
+      "rules": {
+        "@typescript-eslint/no-var-requires": "off"
+      }
+    }
+  ]
 }
