--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
-    "sourceMap": true,
     "target": "es5",
-    "module": "es2015"
+    "module": "es2015",
+    "strict": true,
+    "esModuleInterop": true
   }
 }
