--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint --ignore-path .gitignore --ext .js,.ts --fix .",
     "test": "jest",
-    "build": "npm run lint && npm run test && rimraf dist && webpack && cpx src/appsscript.json dist",
+    "build": "npm run lint && npm run test && rimraf dist && webpack && cpy src/appsscript.json dist",
     "deploy": "npm run build && clasp push"
   },
   "repository": {
@@ -21,7 +21,7 @@
     "@types/jest": "24.9.0",
     "@typescript-eslint/eslint-plugin": "2.16.0",
     "@typescript-eslint/parser": "2.16.0",
-    "cpx": "1.5.0",
+    "cpy-cli": "^3.0.0",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.9.0",
     "eslint-plugin-googleappsscript": "1.0.3",
