--- a/src/appsscript.json
+++ b/src/appsscript.json
@@ -4,5 +4,6 @@
   "oauthScopes": [
     "https://www.googleapis.com/auth/script.external_request"
   ],
-  "exceptionLogging": "STACKDRIVER"
+  "exceptionLogging": "STACKDRIVER",
+  "runtimeVersion": "V8"
 }
