--- a/package.json
+++ b/package.json
@@ -18,26 +18,7 @@
   "author": "proudust",
   "license": "MIT",
   "devDependencies": {
-    "@google/clasp": "2.3.0",
-    "@types/google-apps-script": "1.0.11",
-    "@types/jest": "25.1.4",
-    "@typescript-eslint/eslint-plugin": "2.26.0",
-    "@typescript-eslint/parser": "2.26.0",
-    "cpy-cli": "^3.1.0",
-    "eslint": "6.8.0",
-    "eslint-config-prettier": "6.10.1",
-    "eslint-plugin-googleappsscript": "1.0.3",
-    "eslint-plugin-jest": "23.8.2",
-    "eslint-plugin-prettier": "3.1.2",
-    "gas-webpack-plugin": "1.0.2",
-    "jest": "25.2.4",
-    "prettier": "2.0.2",
-    "rimraf": "3.0.2",
-    "ts-jest": "25.3.0",
-    "ts-loader": "6.2.2",
-    "typescript": "3.8.3",
-    "webpack": "4.42.1",
-    "webpack-cli": "3.3.11"
+    "@google/clasp": "2.3.0"
   },
   "jest": {
     "transform": {
