:arrow_up: Update clasp

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "author": "proudust",
   "license": "MIT",
   "devDependencies": {
-    "@google/clasp": "2.3.0"
+    "@google/clasp": "^2.4.1"
   },
   "jest": {
     "transform": {
