--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,24 +9,22 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Cache node modules
-        uses: actions/cache@v1
+      - name: Use Node.js 16
+        uses: actions/setup-node@v2
         with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
+          node-version: 16
+          cache: npm
+
+      - name: Use Deno
+        uses: denoland/setup-deno@v1
+        with:
+          deno-version: v1.x
 
       - name: Install Dependencies
         run: npm ci
 
-      - name: Lint
-        run: npm run lint:ci
-
-      - name: Test
-        run: npm run test:ci -- --ci
+      - name: Lint and Test
+        run: npm test
 
       - name: Build
         run: npm run build
