--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "description": "This get weather forecast from Dark Sky API, and post it to Discord. It works with Google App Script.",
   "scripts": {
-    "lint": "eslint --ignore-path .gitignore --ext .js,.ts --fix .",
-    "lint:ci": "eslint --ignore-path .gitignore --ext .js,.ts .",
-    "test": "jest",
-    "test:ci": "jest --ci",
+    "fix": "run-s fix:*",
+    "fix:deno-lint": "deno lint --config deno.jsonc",
+    "fix:deno-fmt": "deno fmt --config deno.jsonc",
+    "lint": "run-p -l -c --aggregate-output lint:*",
+    "lint:deno-lint": "deno lint --config deno.jsonc",
+    "lint:deno-fmt": "deno fmt --check --config deno.jsonc",
+    "test": "run-p -l -c --aggregate-output lint:*",
     "build": "rimraf dist && webpack && cpy src/appsscript.json dist",
     "deploy": "clasp push"
   },
@@ -18,7 +21,8 @@
   "author": "proudust",
   "license": "MIT",
   "devDependencies": {
-    "@google/clasp": "^2.4.1"
+    "@google/clasp": "^2.4.1",
+    "npm-run-all": "^4.1.5"
   },
   "jest": {
     "transform": {
