:sparkles: Rewrite based on proudust/gas-deno-starter

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,32 +5,33 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: >
+      github.event_name == 'push' ||
+      github.event.pull_request.head.repo.full_name != github.repository
 
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Use Node.js 16
-        uses: actions/setup-node@v2
-        with:
-          node-version: 16
-          cache: npm
+      - name: Checkout
+        uses: actions/checkout@v3
 
       - name: Use Deno
         uses: denoland/setup-deno@v1
         with:
           deno-version: v1.x
 
-      - name: Install Dependencies
-        run: npm ci
+      - name: Format Check
+        run: deno fmt --check
 
-      - name: Lint and Test
-        run: npm test
+      - name: Lint
+        run: deno lint
+
+      - name: Test
+        run: deno test
 
       - name: Build
-        run: npm run build
+        run: deno task build
 
-      - if: github.ref == 'refs/heads/master'
+      - if: github.ref == 'refs/heads/master' && env.CLASPRC != ''
         name: Deploy
-        run: echo $CLASPRC > ~/.clasprc.json && npm run deploy
+        run: echo "$CLASPRC" > ~/.clasprc.json && deno task build deploy
         env:
           CLASPRC: ${{ secrets.CLASPRC }}
